<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ssuser.ss.sunstonechat.RegisterActivity">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/registerTitle"
            android:textSize="34dp"
            android:textIsSelectable="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="0" />

        <GridLayout
            android:layout_width="335dp"
            android:layout_height="305dp"
            android:layout_row="2"
            android:layout_column="0">

            <Space
                android:layout_width="128dp"
                android:layout_height="44dp"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="125dp"
                android:layout_height="47dp"
                android:text="@string/usernameRegister"
                android:id="@+id/textView2"
                android:layout_row="1"
                android:layout_column="0"
                android:gravity="center"
                android:textSize="22dp" />

            <EditText
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/usernameRegisterId"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/usernameHintRegister"
                android:gravity="center"
                android:singleLine="true" />

            <Space
                android:layout_width="128dp"
                android:layout_height="14dp"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="125dp"
                android:layout_height="47dp"
                android:text="@string/emailRegister"
                android:id="@+id/textView4"
                android:layout_row="3"
                android:layout_column="0"
                android:gravity="center"
                android:textSize="22dp" />

            <EditText
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/emailRegisterId"
                android:layout_row="3"
                android:layout_column="1"
                android:hint="@string/emailHintRegister"
                android:gravity="center"
                android:singleLine="true"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="128dp"
                android:layout_height="14dp"
                android:layout_row="4"
                android:layout_column="0" />

            <TextView
                android:layout_width="125dp"
                android:layout_height="47dp"
                android:text="@string/phoneRegister"
                android:id="@+id/textView5"
                android:layout_row="5"
                android:layout_column="0"
                android:gravity="center"
                android:textSize="18dp" />

            <EditText
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/phoneRegisterId"
                android:layout_row="5"
                android:layout_column="1"
                android:hint="@string/phoneHintRegister"
                android:gravity="center"
                android:inputType="phone"
                android:singleLine="true" />

            <Space
                android:layout_width="128dp"
                android:layout_height="14dp"
                android:layout_row="6"
                android:layout_column="0" />

            <TextView
                android:layout_width="125dp"
                android:layout_height="47dp"
                android:text="@string/passwordRegister"
                android:id="@+id/textView6"
                android:layout_row="7"
                android:layout_column="0"
                android:gravity="center"
                android:textSize="18dp" />

            <EditText
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/passwordRegisterId"
                android:layout_row="7"
                android:layout_column="1"
                android:hint="@string/passwordHintRegister"
                android:gravity="center"
                android:singleLine="true"
                android:inputType="textPassword" />

        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_row="3"
            android:layout_column="0">

            <Space
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0" />

            <Button
                android:layout_width="148dp"
                android:layout_height="64dp"
                android:text="@string/registerButton"
                android:id="@+id/button"
                android:layout_row="0"
                android:layout_column="1"
                android:textSize="20dp"
                android:onClick="onRegisterSubmit" />
        </GridLayout>

    </GridLayout>
</RelativeLayout>
