<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ssuser.ss.sunstonechat.HomeActivity">

    <TextView android:text="@string/welcomeTitle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="44dp"
        android:id="@+id/welcomeTitle"
        android:textIsSelectable="true"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textlines" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageOverViewTitle"
        android:id="@+id/messageOverViewTitle"
        android:layout_below="@+id/welcomeTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textSize="25dp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/messageOverViewTitle">

        <Button
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/contactListBtn"
            android:id="@+id/contactListBtn"
            android:onClick="onClickContactList"
            android:layout_gravity="left|bottom"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/messageNewBtn"
            android:id="@+id/messageNewBtn"
            android:onClick="onClickMessage"
            android:layout_gravity="right|bottom" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:id="@+id/messageListView"
            android:layout_gravity="left|top" />
    </FrameLayout>

</RelativeLayout>
